syntax = "proto3";

option go_package = "grpc/proto";

package primarynode;

service PrimaryNodeService {
  // RPC para enviar datos al Data Node correspondiente
  rpc TransferirDatos(DatosDigimon) returns (Confirmacion);
  
  // RPC para solicitar cantidad de datos acumulados
  rpc SolicitarDatos(SolicitudTai) returns (RespuestaTai);
}

message DatosDigimon {
  int32 id = 1;             
  string nombre = 2;         
  string atributo = 3;       
  bool sacrificado = 4;      
}

message SolicitudTai {
  string mensaje = 1; 
}

message RespuestaTai {
  float cantidad_datos = 1; 
}

message Confirmacion {
  string mensaje = 1; 
}
